# python_programs

./: .gitignore  README.md  count_files_occurences.py  git_status.txt  global_object_getter_setter.py  loading_imports.py  save_complete_path_tree_files_folders.py  template_file.py  template_file_ultra.py  utils.py  utils_all.py  utils_function.py  utils_load_module.py  utils_multiprocessing_manager.py  utils_numpy.py  utils_range.py  utils_serialization.py
bases/: base_sequences.py  consecutive_ones_in_numbers.py
binary_games/: matrix_binary_game.py
binary_to_image/: convert_file_to_image.py
bit_network_automaton/: .gitignore  bit_network.py
bits/: bits_challanges.py  multiply_big_int.py  numbers_bits_xor_unique_tuples.py
brutal_one_liners/: from_number_to_hex_array.py
bytes_io/: bytes_file_compressed_in_memory.py  bytes_read_write_to_stick.py  numpy_bytes_io.py  numpy_bytes_io_simple.py
c_programs/: Makefile  c_str_test.c  compile.sh  compile_programs.sh  huge_number_test.c  increase_stack_size.c  print_char.c  sequence_generator.c  set_bigger_stack.c  simple_c_example.c  simple_program.c  test_currying.c  test_global_local_variables.c  test_print_char.c  test_varibale_from_other_thread.c
cell_math/: cell_matrix_unique.py
clojure/: test_program.clj
clustering/: try_k_mean_algorithm.py  utils_cluster.py
combinatorics/: different_combinations.py
complex_numbers/: ComplexDec.py  Makefile  calc_mandelbrot_set_iterations.cpp  complex_numbers_precision_test.cpp  create_gif.sh  generate_generic_z_function.py  generate_mp4_video.sh  mandelbrot_set_pictures.py  show_2d_complex_function.py  simple_graph.py  utils.py
compress_enwiki8/: .gitignore  analyse_compressions_method.py  analyse_enwik8_compression.py  compress_enwik8_attempt_2.py  compress_enwiki8.py  compress_random_bits.py  create_stats_enwik8.py  different_byte_encodings.py  find_bug_for_idxs_ranges.py  utils_compress_enwik8.py
cpp_programs/: .gitignore  COLORS.h  Makefile  Makefile_template  analyse_simple_hashing_algorithm.py  calculate_prime_numbers.cpp  compile_programs.sh  hex_output.cpp  main_template.cpp  modulo_sequence.cpp  simple_hashing_algorithm.cpp  test_currying.cpp  test_vector.cpp  test_vector_2.cpp  test_vector_3.cpp  test_vector_sort.cpp  utils.cpp  utils.h
create_graph_net_speed/: get_rx_bytes.py  graph_net_speed.py
create_video/: random_pixel_video.py  random_video_from_images.py
csharp_programs/: hello_world.cs  read_write_file.cs  simple_list_example.cs
database/: mongo_db_example.py
death_counter/: death_counter.ui
decimal_expansions/: decimal_expansion_sequence.py  product_series_convergence.py
difference_equation/: example1.py  example2.py
encryption/: .gitignore  Utils.py  all_hex.hex.bak  (+15 more)
genetic_algorithm/: .gitignore  CMakeLists.txt  GeneticAlgorithmTetris.py  Makefile  README.md  SimpleNeuralNetwork.py  TetrisGameField.py  compile_commands.json  create_images_from_tetris_game_data.py  create_tetromino_pieces.py  do_many_simple_examples.sh  simple_example.sh  tetris_deep_search_path_optimization.cpp  tetris_deep_search_path_optimization.py  tetris_genetic_algorithm.py  utils_objects.py  utils_tetris.cpp  utils_tetris.h  utils_tetris.py
genetic_algorithm/tic_tac_toe/: tic_tac_toe_game.py
prng/cpp/: CMakeLists.txt  OwnPRNG.h  OwnRND.h  prng_in_cpp.cpp  sha256.h
rust/boardgame_ai/: Cargo.toml
rust/boardgame_ai/src/: main.rs
rust/shell_sort/: Cargo.toml  run.sh
rust/shell_sort/src/: main.rs
sequence_generators/1d_array_loops/array_1d_loops/: Cargo.toml  analyse_allocs.sh  run.sh
sequence_generators/1d_array_loops/array_1d_loops/src/: main.rs
sequence_generators/generate_2d_sequences_better/cpp/: .gitignore  CMakeLists.txt  RandomGen.h  generate_2d_sequence_images.cpp
(+663 files in other folders)
