cmake_minimum_required(VERSION 3.16)
project(tetris_deep_search_path_optimization)

set(CMAKE_CXX_STANDARD 17)

add_library(utils ../cpp_programs/primes/utils.cpp)
add_library(utils_tetris utils_tetris.cpp)
add_library(pystring pystring/pystring.cpp)

add_executable(tetris_deep_search_path_optimization tetris_deep_search_path_optimization.cpp)
target_link_libraries(tetris_deep_search_path_optimization utils)
target_link_libraries(tetris_deep_search_path_optimization utils_tetris)
target_link_libraries(tetris_deep_search_path_optimization pystring)
