[package]
name = "shell_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
oorandom = "11.1.3"
# https://github.com/hearues-zueke-github/LCGMulXorPRNG
# prng = { git = "https://github.com/hearues-zueke-github/LCGMulXorPRNG.git" }
prng = { path = 'src/prng' }
